<resources>
    <string name="app_name">SiliconStackReport</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading...</string>
    <string name="are_you_sure_you_want_to_delete_this_report">Are you sure you want to delete this report ?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="enter_report">Enter Report</string>
    <string name="upload_images">Upload Images</string>
    <string name="add_report">Add Report</string>
    <string name="update_report">Update Report</string>
    <string name="delete_report">Delete Report</string>
    <string name="delete_image">Delete Image</string>
    <string name="no_reports_found">No report found</string>
    <string name="are_you_sure_you_want_to_delete_this_image">Are you sure you want to delete this image ?</string>
</resources>