<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.MainActivity">

    <item
        android:id="@+id/Home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/Search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/Profile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/Settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="always" />

</menu>