<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BB000000"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        card_view:cardBackgroundColor="@color/colorWhite"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="7dp"
        card_view:cardUseCompatPadding="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:text="@string/delete_report"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_below="@+id/textViewTitle"
                android:layout_marginTop="10dp"
                android:background="@color/colorSecondaryText"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textViewLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewTitle"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="45dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:text="@string/are_you_sure_you_want_to_delete_this_report"
                android:textColor="@color/colorBlack"
                android:textSize="16dp" />


            <View
                android:id="@+id/tabRow"
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:layout_below="@+id/textViewLabel"
                android:layout_marginTop="35dp"
                android:background="@color/colorSecondaryText"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tabRow"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCancel"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16dp" />

                <View
                    android:layout_width="0.7dp"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/textViewInfo"
                    android:background="@color/colorSecondaryText"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/textViewSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textColor="@color/colorBlack"
                    android:textSize="16dp" />

            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>