<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.kaps.siliconreportkotlin.viewmodel.AddUpdateViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <ImageView
                        android:id="@+id/imageViewBack"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:padding="7dp"
                        android:src="@drawable/ic_back"
                        app:tint="@color/colorPrimary" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:layout_centerVertical="true"
                        android:onClick="@{()-> viewModel.onClose()}"
                        android:padding="12dp"
                        android:src="@drawable/logo_ss" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorSecondaryText" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="05dp"
                        android:layout_marginRight="15dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center_vertical"
                        android:text="@string/upload_images"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="16dp" />

                    <ImageView
                        android:id="@+id/imageViewCamera"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_marginRight="15dp"
                        android:onClick="@{()-> viewModel.onCamera()}"
                        android:src="@drawable/ic_camera" />

                    <ImageView
                        android:id="@+id/imageViewGallery"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_marginRight="15dp"
                        android:onClick="@{()-> viewModel.onGallery()}"
                        android:src="@drawable/ic_gallery" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewReportImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:text="@string/enter_report"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/editTextReport"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:afterTextChanged="@{(editable)->viewModel.afterReportTextChanged(editable)}"
                    android:background="@drawable/corner_bg"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="top"
                    android:imeOptions="actionDone"
                    android:inputType="textPersonName"
                    android:maxLength="500"
                    android:maxLines="3"
                    android:padding="10dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="14dp" />

                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:onClick="@{()-> viewModel.onAddReport()}"
                    android:paddingTop="4dp"
                    android:text="@string/add_report"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18dp" />


            </LinearLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

